# Trivia-app

./: README.md  serverTest.py
Client/: Client.sln
Client/Client/: AesEncryption.cs  Client.csproj  Communicator.cs  Constants.cs  CryptoAlgoritm.cs  Form1.Designer.cs  Form1.cs  JsonRequestPacketSerializer.cs  JsonResponsePacketDeserializer.cs  OTP.cs  OTPHelpers.cs  PlayerResults.cs  Program.cs  RSAAlgorithm.cs  Request.cs  Response.cs  RoomData.cs
Client/Client/Properties/: AssemblyInfo.cs
Server/: AesEncryption.cpp  AesEncryption.h  CMakeLists.txt  Communicator.cpp  Communicator.h  CryptoAlgorithm.cpp  CryptoAlgorithm.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameRequestHandler.cpp  GameRequestHandler.h  IDatabase.cpp  IDatabase.h  IRequestHandler.h  JsonRequestPacketDeserializer.cpp  JsonRequestPacketDeserializer.h  JsonResponsePacketSerializer.cpp  JsonResponsePacketSerializer.h  LoggedUser.cpp  LoggedUser.h  LoginManager.cpp  LoginManager.h  LoginRequestHandler.cpp  LoginRequestHandler.h  MenuRequestHandler.cpp  MenuRequestHandler.h  MongoDatabase.cpp  MongoDatabase.h  OTPCryptoAlgorithm.cpp  OTPCryptoAlgorithm.h  PlayerResults.h  Question.cpp  Question.h  RSACryptoAlgorithm.cpp  RSACryptoAlgorithm.h  Request.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  (+32 more)
